More WIP getting ingest working